...

    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = .black
        view.insetsLayoutMarginsFromSafeArea = false
        view.directionalLayoutMargins = .zero
        view.accessibilityIdentifier = "mediaSfuHostRootView"

        let hosted = hostAdapter.makeHostedViewController(context: hostContext)
        hosted.modalPresentationStyle = .fullScreen
        hosted.modalPresentationCapturesStatusBarAppearance = true
        addChild(hosted)
        hosted.view.translatesAutoresizingMaskIntoConstraints = false
...
